[gd_scene load_steps=2 format=2]

[ext_resource path="res://Crafting/CraftRecipe.gd" type="Script" id=1]

[node name="CenterContainer" type="CenterContainer"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0

[node name="RichTextLabel" type="RichTextLabel" parent="."]
margin_left = 20.0
margin_top = 20.0
margin_right = 20.0
margin_bottom = 20.0

[connection signal="gui_input" from="." to="." method="_on_CenterContainer_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_CenterContainer_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_CenterContainer_mouse_exited"]
